--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title><%=title %></title>
@@ -17,7 +17,7 @@
        <%= image_tag("logo.png", :alt => "Sample App", :class => "round") %> <nav class="round">
         <nav class="round">
         <ul> 
-          <li><%= link_to "Home", '#' %> </li>
+          <li><%= link_to "Home", '#' %></li>
           <li><%= link_to "Help", '#' %></li>
           <li><%= link_to "Sign in", '#' %></li>
         </ul> 
