--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,5 +6,6 @@
   <li><%= link_to "Home", root_path %></li>
   <li><%= link_to "Help", help_path %></li> 
   <li><%= link_to "Sign in", '#' %></li>
-</ul> </nav>
+</ul> 
+</nav>
 </header>
