--- a/public/stylesheets/blueprint/custom.css
+++ b/public/stylesheets/blueprint/custom.css
@@ -115,3 +115,8 @@ a.signup_button {
 		border: 1px solid #999; 
 		margin-bottom: -15px;
 	}
+
+	/* User Signup Form page */
+
+	div.field, div.actions {
+	margin-bottom: 10px; }
