--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,17 @@
 	<head>
 		<title><%=title %></title>
 		<%= csrf_meta_tag %>
-		<%= render 'layouts/stylesheets' %>
+		  <%= render 'layouts/stylesheets' %>
 		</head>
 		<body>
-		<div class="container"> 
-		  <%= render 'layouts/header' %>
-      <section class="round">
-      <%= yield %> 
-      </section>
+		<div class="container">
+		<%= render 'layouts/header' %> 
+		<section class="round">
+        <% flash.each do |key, value| %>
+            <div class="flash <%= key %>"><%= value %></div>
+          <% end %>
+          <%= yield %> 
+        </section>
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
       </div>
