--- a/public/stylesheets/blueprint/custom.css
+++ b/public/stylesheets/blueprint/custom.css
@@ -156,3 +156,10 @@ a.signup_button {
 		font-size: 12px; 
 		list-style: square;
 	}
+	
+	ul.users {
+	margin-top: 1em; 
+	}
+	.users li { 
+		list-style: none;
+	}
