Users index with Pagination

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,10 @@
 
 <ul class="users">
 
-  <% @users.each do |user| %>
-      <%= render user %>
+ 
+      <%= render @users %>
 
-<% end %> 
+
 </ul>
 
 <%= will_paginate %>
